--- a/index.html
+++ b/index.html
@@ -128,26 +128,22 @@
             <form class="formUser step2" action="">
                 <div class="formUser__field">
                     <label for="username" class="userLabel">Username</label>
-                    <input type="text" name="username" id="username" class="formUser__input" value="" required
-                        oninvalid="this.setCustomValidity('Please Enter valid User name')">
+                    <input type="text" name="username" id="username" class="formUser__input" value="" required minlength="3" maxlength="8" pattern="^[a-zA-Z0-9]{3,20}$" title="Only letters & number between 3 and 9 characters">
                     <span class="errorValidation"></span>
                 </div>
                 <div class="formUser__field">
                     <label for="email" class="userLabel">E-Mail</label>
-                    <input type="email" name="email" id="email" class="formUser__input" value="" required
-                        oninvalid="this.setCustomValidity('Please Enter a correct email address')">
+                    <input type="email" name="email" id="email" class="formUser__input" value="" required title="Enter a valid email address">
                     <span class="errorValidation"></span>
                 </div>
                 <div class="formUser__field">
                     <label for="pass" class="userLabel">Password</label>
-                    <input type="password" name="pass" id="pass" class="formUser__input" value="" required
-                        oninvalid="this.setCustomValidity('Please Enter a valid password')">
+                    <input type="password" name="pass" id="pass" class="formUser__input" value="" required minlength="8" pattern="(?=^.{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$" title="Min. 8 characters. Must include UpperCase, LowerCase, Number/SpecialChar">
                     <span class="errorValidation"></span>
                 </div>
                 <div class="formUser__field" id="password-field">
                     <label for="confPass" class="userLabel">Confirm Password</label>
-                    <input type="password" name="confPass" id="confPass" class="formUser__input" value=""
-                        oninvalid="this.setCustomValidity('Please use the same password as bellow')">
+                    <input type="password" name="confPass" id="confPass" class="formUser__input" value="" required minlength="8" pattern="(?=^.{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$" title="Please use the same password as below">
                     <span class="errorValidation"></span>
                 </div>
                 <p class="errorMessage" id="errorAddress">Missing fields</p>
