Dinamical first load implementated

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
         <button class="navButton clickable" id="model-3-nav" value="model-3">Model 3</button>
         <button class="navButton clickable" id="model-x-nav" value="model-x">Model X</button>
         <button class="navButton clickable" id="model-y-nav" value="model-y">Model Y</button>
-        <button id="icon-button" href="javascript:void(0);" class="icon navButton clickable">
+        <button id="icon-button" class="icon navButton clickable">
           <i id="icon" class="fa fa-bars"></i>
         </button>
       </div>
@@ -52,20 +52,20 @@
     <section class="page pageActive" id="step1">
       <div class="home">
         <!-- Main picture-->
-        <div class=main-picture>
+        <div class="main-picture">
           <div class='hover-column' id='hover-column'>
             <img class="clickable"
-              src="https://static-assets.tesla.com/configurator/compositor?&options=$MT320,$PPSW,$W40B,$IBB0&view=STUD_FRONT34&model=m3&size=1920&bkba_opt=1&version=v0028d202011130359&crop=0,0,0,0&version=v0028d202011130359" />
+              src="" />
             <img class="clickable"
-              src="https://static-assets.tesla.com/configurator/compositor?&options=$IBB0,$PPSW,$MT320&view=STUD_INTERIOR&model=m3&size=1441&bkba_opt=1&version=v0028d202011130359&crop=0,0,0,0&version=v0028d202011130359" />
+              src="" />
             <img class="clickable"
-              src="https://static-assets.tesla.com/configurator/compositor?&options=$IBW0,$PPSW,$MT320&view=STUD_INTERIOR&model=m3&size=1441&bkba_opt=1&version=v0028d202011130359&crop=0,0,0,0&version=v0028d202011130359" />
+              src="" />
             <img class="clickable"
-              src="https://www.adslzone.net/app/uploads-adslzone.net/2020/07/tesla-model-3-blanco.jpg" />
+              src="" />
           </div>
           <div class="main-picture-img">
             <img id="mainImage"
-              src="https://static-assets.tesla.com/configurator/compositor?&options=$MT320,$PPSW,$W40B,$IBB0&view=STUD_FRONT34&model=m3&size=1920&bkba_opt=1&version=v0028d202011130359&crop=0,0,0,0&version=v0028d202011130359" />
+              src="" />
           </div>
           <!--
                     <div class="main-picture-models" id="modelContainer">
