Fixed gift options hidden by default

--- a/src/index.html
+++ b/src/index.html
@@ -54,18 +54,13 @@
         <!-- Main picture-->
         <div class="main-picture">
           <div class='hover-column' id='hover-column'>
-            <img class="clickable"
-              src="" />
-            <img class="clickable"
-              src="" />
-            <img class="clickable"
-              src="" />
-            <img class="clickable"
-              src="" />
+            <img class="clickable" src="" />
+            <img class="clickable" src="" />
+            <img class="clickable" src="" />
+            <img class="clickable" src="" />
           </div>
           <div class="main-picture-img">
-            <img id="mainImage"
-              src="" />
+            <img id="mainImage" src="" />
           </div>
           <!--
                     <div class="main-picture-models" id="modelContainer">
@@ -189,7 +184,7 @@
         </div>
         <div class="formAddress__field">
           <label for="postalCode" class="addressLabel">Postal code</label>
-          <input type="number" name="postalCode" id="postalCode" class="formAddress__input" required
+          <input type="text" name="postalCode" id="postalCode" class="formAddress__input" required
             title="Please Enter a valid postal code" pattern="\d{5}$" minlength="5" maxlength="5">
           <span class="errorValidation"></span>
         </div>
