--- a/src/index.html
+++ b/src/index.html
@@ -320,7 +320,7 @@
   <script src="./assets/js/termsCheck.js"></script>
   <script src="./assets/js/javascript.js"></script>
   <script src="./assets/js/homepage.js"></script>
-  <script src="./assets/js/menu.js"></script>
+  <script src="./assets/js/navBar.js"></script>
 </body>
 
 </html>
