--- a/src/index.html
+++ b/src/index.html
@@ -62,22 +62,6 @@
           <div class="main-picture-img">
             <img id="mainImage" src="" />
           </div>
-          <!--
-                    <div class="main-picture-models" id="modelContainer">
-                        <button class="carModel clickable" id="model-s">
-                            <p>S</p>
-                        </button>
-                        <button class="carModel clickable" id="model-3">
-                            <p>3</p>
-                        </button>
-                        <button class="carModel clickable" id="model-x">
-                            <p>X</p>
-                        </button>
-                        <button class="carModel clickable" id="model-y">
-                            <p>Y</p>
-                        </button>
-                    </div>
-                    -->
         </div>
         <!-- Main details column-->
         <div class="details-column">
@@ -96,7 +80,7 @@
             <h3></h3>
             <p class="specValue"></p>
           </div>
-          <div class="extras" id="carExtras">
+          <div class="extras carExtras" id="carExtras">
             <input type="checkbox" class="clickable" id="Autopilot" name="Autopilot" value="0">
             <label for="Autopilot"><strong>Autopilot</strong></label><br>
             <input type="checkbox" class="clickable" id="Performance" name="Performance" value="1">
