Deleted and updated comments

--- a/src/index.html
+++ b/src/index.html
@@ -317,8 +317,7 @@
   </main>
   <!--Footer-->
   <script src="./assets/js/data.js"></script>
-  <script src="./assets/js/termsCheck.js"></script>
-  <script src="./assets/js/javascript.js"></script>
+  <script src="./assets/js/steps.js"></script>
   <script src="./assets/js/homepage.js"></script>
   <script src="./assets/js/navBar.js"></script>
 </body>
