--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,18 @@
     <title>Shopping Wizard</title>
 </head>
 <body>
-<h1>Hello World</h1>
+<header>
+    <div class="head"></div>
+</header>
+<main>
+    <div class="main"></div>
+    <div class="profile"></div>
+    <div class="address"></div>
+    <div class="shipping"></div>
+    <div class="finish"></div>
+</main>
+<footer>
+    <div class="foot"></div>
+</footer>
 </body>
 </html>
