--- a/src/index.html
+++ b/src/index.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
     <title>Shopping Wizard</title>
-</head>
-<body>
-<header>
-    <div class="head"></div>
-</header>
-<main>
-    <div class="main"></div>
-    <div class="profile"></div>
-    <div class="address"></div>
-    <div class="shipping"></div>
-    <div class="finish"></div>
-</main>
-<footer>
-    <div class="foot"></div>
-</footer>
-</body>
+  </head>
+  <body>
+    <header>
+      <div class="head">
+        <h2>logo</h2>
+      </div>
+    </header>
+    <main>
+      <div class="main"></div>
+      <div class="profile"></div>
+      <div class="address"></div>
+      <div class="shipping"></div>
+      <div class="finish"></div>
+    </main>
+    <footer>
+      <div class="foot"></div>
+    </footer>
+  </body>
 </html>
