--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <header>
       <div class="head">
         <h2>logo</h2>
-        <h2>Jose</h2>
+        <h2>Victor</h2>
       </div>
     </header>
     <main>
