--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
       <div class="head">
         <h2>logo</h2>
         <h2>Victor</h2>
+        <h2>Text created from develop-jose branch</h2>
       </div>
     </header>
     <main>
