--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,9 @@
     <header>
     <div class="head">
         <h2>logo</h2>
-        <h2>Jose</h2>
+        <h2>Victor</h2>
+        <h2>Text created from develop-jose branch</h2>
+        <h3>walber</h3>
         <h2>Ricardo</h2>
     </div>
     </header>
