--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,31 @@
     </div>
     </header>
     <main>
-        <div class="main"></div>
+        <div class="main">
+            <img src="/assets/iStock-1173379266.jpg" alt="white t-shirt"/>
+            <button class="minis"></button>
+            <button class="minis"></button>
+            <button class="minis"></button>
+            <h2>White t-shirt</h2>
+            <h3>price:</h3>
+            <h2>14.55€</h2>
+            <div class="dropdown">
+                <button class="dropbtn">Choose size</button>
+                <div class="dropdown-content">
+                <a href="#">XS</a>
+                <a href="#">S</a>
+                <a href="#">M</a>
+                <a href="#">L</a>
+                <a href="#">XL</a>
+                </div>
+            </div>
+            <button class="options"></button>
+            <button class="options"></button>
+            <button class="options"></button>
+            <button class="options"></button>
+            <button class="options"></button>
+            <button class="options"></button>
+        </div>
         <div class="profile"></div>
         <div class="address"></div>
         <div class="shipping"></div>
