--- a/src/index.html
+++ b/src/index.html
@@ -39,8 +39,20 @@
             <button class="options"></button>
             <button class="options"></button>
             <button class="options"></button>
+            <button class="btn-buy">Buy Now</button>
         </div>
-        <div class="profile"></div>
+        <div class="profile">
+            <div class="nav">
+                <h3>aqui iria el mapa </h3>
+            </div>
+            <form action="/action_page.php">
+                <label for="name">Username:</label><br>
+                <input type="text" id="name" name="name"><br>
+                <label for="last-name">Last name:</label><br>
+                <input type="text" id="last-name" name="last-name"><br><br>
+                <input type="submit" value="Submit">
+            </form>
+        </div>
         <div class="address"></div>
         <div class="shipping"></div>
         <div class="finish"></div>
