--- a/src/index.html
+++ b/src/index.html
@@ -48,8 +48,12 @@
             <form action="/action_page.php">
                 <label for="name">Username:</label><br>
                 <input type="text" id="name" name="name"><br>
-                <label for="last-name">Last name:</label><br>
-                <input type="text" id="last-name" name="last-name"><br><br>
+                <label for="e-mail">E-mail:</label><br>
+                <input type="email" id="email" name="email"><br><br>
+                <label for="password">Password:</label><br>
+                <input type="password" id="password" name="password"><br><br>
+                <label for="confirm-password">Password:</label><br>
+                <input type="confirm-password" id="confirm-password" name="confirm-password"><br><br>
                 <input type="submit" value="Submit">
             </form>
         </div>
