shipping section html

--- a/src/index.html
+++ b/src/index.html
@@ -90,7 +90,57 @@
 
                 </form>
             </div>
-            <div class="shipping"></div>
+            <div class="shipping">
+
+
+            <!-- Pending task : buttons historic puchases -->
+            <div class="container-form">
+              <h2>Shipping</h2>
+              <form action="#">
+                <h3>Shipping type</h3>
+                <input type="radio" name="free" id="free_shipping" />
+                <label for="free_shipping">Free shipping (72h)</label>
+                <br />
+                <input type="radio" name="extra" id="extra_shipping" />
+                <label for="extra_shipping">Extra shipping (48h) <b>4,99€</b></label>
+                <br />
+                <input type="radio" name="premium" id="premium" />
+                <label for="premium">Premium (24h) <b>9,99€</b></label>
+                <br />
+
+                <!-- This part is for JS dates events
+                          <div>
+                          <p><b>Your order will arrive:</b></p>
+                          <p>Estimate delivery date:</p>
+                          <p>Between <b>21 de Julio de 2020 14:00h and 21 de Julio de 2020 20:00h</b></p>
+                        </div> 
+                      -->
+
+                <input type="checkbox" name="" id="gift" />
+                <label for="gift">Is it a gift?</label>
+                <br />
+
+                <label for="gift_message">Gift message</label>
+                <br />
+                <input type="text" name="" id="gift_message" />
+                <br />
+
+                <label for="">Gift wrapper image</label>
+                <br />
+                <input type="button" value="Select Image" />
+                <br />
+              </form>
+
+              <!-- Pending task : footer buttons -->
+            </div>
+
+
+
+
+
+
+
+            </div>
             <div class="finish">
                 <div class="order-message">
                     <h2>Your order is complete 🎉</h2>
