--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
                 <input type="email" id="email" name="email"><br><br>
                 <label for="password">Password:</label><br>
                 <input type="password" id="password" name="password"><br><br>
-                <label for="confirm-password">Password:</label><br>
+                <label for="confirm-password">Confirm Password:</label><br>
                 <input type="confirm-password" id="confirm-password" name="confirm-password"><br><br>
                 <input type="submit" value="Submit">
             </form>
