--- a/src/index.html
+++ b/src/index.html
@@ -19,12 +19,52 @@
     <body>
         <header>
             <div class="head">
-
+                <h2>logo</h2>
             </div>
-        </header>
-        <main>
-            <div class="main"></div>
-            <div class="profile"></div>
+            </header>
+            <main>
+                <div class="main">
+                    <img src="/assets/iStock-1173379266.jpg" alt="white t-shirt"/>
+                    <button class="minis"></button>
+                    <button class="minis"></button>
+                    <button class="minis"></button>
+                    <h2>White t-shirt</h2>
+                    <h3>price:</h3>
+                    <h2>14.55€</h2>
+                    <div class="dropdown">
+                        <button class="dropbtn">Choose size</button>
+                        <div class="dropdown-content">
+                        <a href="#">XS</a>
+                        <a href="#">S</a>
+                        <a href="#">M</a>
+                        <a href="#">L</a>
+                        <a href="#">XL</a>
+                        </div>
+                    </div>
+                    <button class="options"></button>
+                    <button class="options"></button>
+                    <button class="options"></button>
+                    <button class="options"></button>
+                    <button class="options"></button>
+                    <button class="options"></button>
+                    <button class="btn-buy">Buy Now</button>
+                </div>
+                <div class="profile">
+                    <div class="nav">
+                        <h3>aqui iria el mapa </h3>
+                    </div>
+                    <form action="/action_page.php">
+                        <label for="name">Username:</label><br>
+                        <input type="text" id="name" name="name"><br>
+                        <label for="e-mail">E-mail:</label><br>
+                        <input type="email" id="email" name="email"><br><br>
+                        <label for="password">Password:</label><br>
+                        <input type="password" id="password" name="password"><br><br>
+                        <label for="confirm-password">Confirm Password:</label><br>
+                        <input type="confirm-password" id="confirm-password" name="confirm-password"><br><br>
+                        <input type="submit" value="Submit">
+                    </form>
+                </div>
             <div class="address">
                 <h2>Address</h2>
 
