--- a/src/index.html
+++ b/src/index.html
@@ -21,50 +21,50 @@
             <div class="head">
                 <h2>logo</h2>
             </div>
-            </header>
-            <main>
-                <div class="main">
-                    <img src="/assets/iStock-1173379266.jpg" alt="white t-shirt"/>
-                    <button class="minis"></button>
-                    <button class="minis"></button>
-                    <button class="minis"></button>
-                    <h2>White t-shirt</h2>
-                    <h3>price:</h3>
-                    <h2>14.55€</h2>
-                    <div class="dropdown">
-                        <button class="dropbtn">Choose size</button>
-                        <div class="dropdown-content">
+        </header>
+        <main>
+            <div class="main">
+                <img src="/assets/iStock-1173379266.jpg" alt="white t-shirt" />
+                <button class="minis"></button>
+                <button class="minis"></button>
+                <button class="minis"></button>
+                <h2>White t-shirt</h2>
+                <h3>price:</h3>
+                <h2>14.55€</h2>
+                <div class="dropdown">
+                    <button class="dropbtn">Choose size</button>
+                    <div class="dropdown-content">
                         <a href="#">XS</a>
                         <a href="#">S</a>
                         <a href="#">M</a>
                         <a href="#">L</a>
                         <a href="#">XL</a>
-                        </div>
                     </div>
-                    <button class="options"></button>
-                    <button class="options"></button>
-                    <button class="options"></button>
-                    <button class="options"></button>
-                    <button class="options"></button>
-                    <button class="options"></button>
-                    <button class="btn-buy">Buy Now</button>
                 </div>
-                <div class="profile">
-                    <div class="nav">
-                        <h3>aqui iria el mapa </h3>
-                    </div>
-                    <form action="/action_page.php">
-                        <label for="name">Username:</label><br>
-                        <input type="text" id="name" name="name"><br>
-                        <label for="e-mail">E-mail:</label><br>
-                        <input type="email" id="email" name="email"><br><br>
-                        <label for="password">Password:</label><br>
-                        <input type="password" id="password" name="password"><br><br>
-                        <label for="confirm-password">Confirm Password:</label><br>
-                        <input type="confirm-password" id="confirm-password" name="confirm-password"><br><br>
-                        <input type="submit" value="Submit">
-                    </form>
+                <button class="options"></button>
+                <button class="options"></button>
+                <button class="options"></button>
+                <button class="options"></button>
+                <button class="options"></button>
+                <button class="options"></button>
+                <button class="btn-buy">Buy Now</button>
+            </div>
+            <div class="profile">
+                <div class="nav">
+                    <h3>aqui iria el mapa </h3>
                 </div>
+                <form action="/action_page.php">
+                    <label for="name">Username:</label><br>
+                    <input type="text" id="name" name="name"><br>
+                    <label for="e-mail">E-mail:</label><br>
+                    <input type="email" id="email" name="email"><br><br>
+                    <label for="password">Password:</label><br>
+                    <input type="password" id="password" name="password"><br><br>
+                    <label for="confirm-password">Confirm Password:</label><br>
+                    <input type="confirm-password" id="confirm-password" name="confirm-password"><br><br>
+                    <input type="submit" value="Submit">
+                </form>
+            </div>
             <div class="address">
                 <h2>Address</h2>
 
@@ -113,7 +113,7 @@
 
                     <div class="item-address">
                         <label for="phone">Phone</label><br>
-                        <select id="country" name="country">
+                        <select id="tel-country" name="country">
                             <option value="AND">AND</option>
                             <option value="ESP">ESP</option>
                             <option value="FR">FR</option>
@@ -133,22 +133,22 @@
             <div class="shipping">
 
 
-            <!-- Pending task : buttons historic puchases -->
-            <div class="container-form">
-              <h2>Shipping</h2>
-              <form action="#">
-                <h3>Shipping type</h3>
-                <input type="radio" name="free" id="free_shipping" />
-                <label for="free_shipping">Free shipping (72h)</label>
-                <br />
-                <input type="radio" name="extra" id="extra_shipping" />
-                <label for="extra_shipping">Extra shipping (48h) <b>4,99€</b></label>
-                <br />
-                <input type="radio" name="premium" id="premium" />
-                <label for="premium">Premium (24h) <b>9,99€</b></label>
-                <br />
+                <!-- Pending task : buttons historic puchases -->
+                <div class="container-form">
+                    <h2>Shipping</h2>
+                    <form action="#">
+                        <h3>Shipping type</h3>
+                        <input type="radio" name="free" id="free_shipping" />
+                        <label for="free_shipping">Free shipping (72h)</label>
+                        <br />
+                        <input type="radio" name="extra" id="extra_shipping" />
+                        <label for="extra_shipping">Extra shipping (48h) <b>4,99€</b></label>
+                        <br />
+                        <input type="radio" name="premium" id="premium" />
+                        <label for="premium">Premium (24h) <b>9,99€</b></label>
+                        <br />
 
-                <!-- This part is for JS dates events
+                        <!-- This part is for JS dates events
                           <div>
                           <p><b>Your order will arrive:</b></p>
                           <p>Estimate delivery date:</p>
@@ -156,28 +156,23 @@
                         </div> 
                       -->
 
-                <input type="checkbox" name="" id="gift" />
-                <label for="gift">Is it a gift?</label>
-                <br />
+                        <input type="checkbox" name="" id="gift" />
+                        <label for="gift">Is it a gift?</label>
+                        <br />
 
-                <label for="gift_message">Gift message</label>
-                <br />
-                <input type="text" name="" id="gift_message" />
-                <br />
+                        <label for="gift_message">Gift message</label>
+                        <br />
+                        <input type="text" name="" id="gift_message" />
+                        <br />
 
-                <label for="">Gift wrapper image</label>
-                <br />
-                <input type="button" value="Select Image" />
-                <br />
-              </form>
+                        <label for="">Gift wrapper image</label>
+                        <br />
+                        <input type="button" value="Select Image" />
+                        <br />
+                    </form>
 
-              <!-- Pending task : footer buttons -->
-            </div>
-
-
-
-
-
+                    <!-- Pending task : footer buttons -->
+                </div>
 
 
             </div>
