first steps of headers

--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,28 @@
 
     <body>
         <header>
-            <div class="head">
-                <h2>logo</h2>
+            <div class="header-main">
+                <h2>Logo</h2>
             </div>
+
+            <div class="header-progress">
+                <div class="message">
+                    <div class="message-child 1">Profile</div>
+                    <div class="message-child 2">Address</div>
+                    <div class="message-child 3">Shipping</div>
+                    <div class="message-child 4">Shipping</div>
+                </div>
+                <div class="progress-bar">
+                    <div class="dot one"></div>
+                    <div class="dot two"></div>
+                    <div class="dot three"></div>
+                    <div class="dot four"></div>
+                    <div class="progress-bar first"></div>
+                    <div class="progress-bar second"></div>
+                    <div class="progress-bar third"></div>
+                </div>
+
+
         </header>
         <main>
             <div class="main">
