--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
                         <input type="password" id="password" name="password"><br><br>
                         <label for="confirm-password">Confirm Password:</label><br>
                         <input type="confirm-password" id="confirm-password" name="confirm-password"><br><br>
-                        <input type="submit" value="Submit">
+                        <input id ="btn-submit" type="submit" value="Submit">
                     </form>
                 </div>
             <div class="address">
@@ -113,7 +113,7 @@
 
                     <div class="item-address">
                         <label for="phone">Phone</label><br>
-                        <select id="country" name="country">
+                        <select id="tel-country" name="country">
                             <option value="AND">AND</option>
                             <option value="ESP">ESP</option>
                             <option value="FR">FR</option>
