--- a/src/index.html
+++ b/src/index.html
@@ -21,9 +21,9 @@
     <main>
         <div class="main">
             <div class="minis">
-                <button></button><br>
-                <button></button><br>
-                <button></button><br>
+                <button class="preview"></button><br>
+                <button class="preview"></button><br>
+                <button class="preview"></button><br>
             </div>
             <div class="picture">
                 <img src="/assets/t-shirt.png" alt="white t-shirt"/>
