add classe to element

--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,7 @@
 
             <div class="profile">
                 <h2>Profile</h2>
-                <form action="/action_page.php">
+                <form class="profile-form">
                     <label for="name">Username:</label><br>
                     <input type="text" id="name" name="name"><br>
                     <label for="e-mail">E-mail:</label><br>
@@ -130,7 +130,7 @@
                     </div>
                     <div class="item-address">
                         <label for="phone">Phone</label><br>
-                        <select id="country" name="country">
+                        <select id="tel-country" name="country">
                             <option value="AND">AND</option>
                             <option value="ESP">ESP</option>
                             <option value="FR">FR</option>
