--- a/src/index.html
+++ b/src/index.html
@@ -206,9 +206,17 @@
 
         </main>
         <footer>
-            <div class="foot">
-                <button class="btn-clear">Clear Form</button>
-                <button class="btn-next">Next</button>
+            <div class="first-foot">
+                <h2>Shop 2022</h2>
+            </div>
+
+            <div class="second-foot">
+                <div class="div-clear">
+                    <button class="btn-clear">Clear form</button>
+                </div>
+                <div class="div-next">
+                    <button class="btn-next">Next</button>
+                </div>
             </div>
         </footer>
     </body>
