--- a/src/index.html
+++ b/src/index.html
@@ -22,24 +22,6 @@
                 <h2>Logo</h2>
             </div>
 
-            <div class="header-progress">
-                <div class="messages">
-                    <div class="message child-one">Profile</div>
-                    <div class="message child-two">Address</div>
-                    <div class="message child-three">Shipping</div>
-                    <div class="message child-four">Finish</div>
-                </div>
-                <div class="wrapper">
-                    <div class="margin-area">
-                        <div class="dot one"></div>
-                        <div class="dot two"></div>
-                        <div class="dot three"></div>
-                        <div class="dot four"></div>
-                        <div class="progress-bar first"></div>
-                    </div>
-                </div>
-        </header>
-
         <main>
             <div class="main">
                 <div class="minis">
@@ -77,6 +59,24 @@
                 </div>
             </div>
 
+            <div class="header-progress">
+                <div class="messages">
+                    <div class="message child-one">Profile</div>
+                    <div class="message child-two">Address</div>
+                    <div class="message child-three">Shipping</div>
+                    <div class="message child-four">Finish</div>
+                </div>
+                <div class="wrapper">
+                    <div class="margin-area">
+                        <div class="dot one"></div>
+                        <div class="dot two"></div>
+                        <div class="dot three"></div>
+                        <div class="dot four"></div>
+                        <div class="progress-bar first"></div>
+                    </div>
+                </div>
+        </header>
+
             <div class="profile">
                 <h2>Profile</h2>
                 <form class="profile-form">
@@ -90,7 +90,7 @@
                     <input type="confirm-password" id="confirm-password" name="confirm-password"><br><br>
                 </form>
             </div>
-            
+
             <div class="address">
                 <h2>Address</h2>
                 <form id="form-address">
@@ -161,7 +161,7 @@
                     <textarea name="message" rows="5" cols="20"></textarea>
                 </form>
             </div>
-            
+
             <div class="finish">
                 <div class="order-message">
                     <h2>Your order is complete 🎉</h2>
@@ -180,7 +180,7 @@
                                 <p class="product-size">Size:<span>M</span></p>
                                 <p class="product-color">Color:<span>🛑</span></p>
                                 <p class="delivery-txt">Estimate delivery date</p>
-                                <p class="delivery-date">31 dezember 2022</p>
+                                <p class="delivery-date">31 december 2022</p>
                             </div>
                         </div>
                         <div class="conditional-check">
@@ -190,7 +190,6 @@
                                 Please accept the terms and conditionals
                             </p>
                         </div>
-                        <button class="btn-buy">Buy Now</button>
                     </div>
                     <!-- Order card -->
                     <div class="order-card">
