--- a/src/index.html
+++ b/src/index.html
@@ -80,45 +80,63 @@
             <div class="profile">
                 <h2>Profile</h2>
                 <form class="profile-form">
-                    <label for="name">Username:</label><br>
-                    <input type="text" id="name" name="name"><br>
-                    <label for="e-mail">E-mail:</label><br>
-                    <input type="email" id="email" name="email"><br><br>
-                    <label for="password">Password:</label><br>
-                    <input type="password" id="password" name="password"><br><br>
-                    <label for="confirm-password">Confirm Password:</label><br>
-                    <input type="confirm-password" id="confirm-password" name="confirm-password"><br><br>
+                    <div class="form-element">
+                        <label for="name">Username:</label><br>
+                        <input type="text" id="name" name="name"><br>
+                        <div id="error-userName"></div>
+                    </div>
+                    <div class="form-element">
+                        <label for="e-mail">E-mail:</label><br>
+                        <input type="email" id="email" name="email"><br>
+                        <div id="error-email"></div>
+                    </div>
+                    <div class="form-element">
+                        <label for="password">Password:</label><br>
+                        <input type="password" id="password" name="password"><br>
+                        <div id="error-password"></div>
+                    </div>
+                    <div class="form-element">
+                        <label for="confirm-password">Confirm Password:</label><br>
+                        <input type="confirm-password" id="confirm-password" name="confirm-password">
+                        <div id="error-confirmPassword"></div><br><br>
+                    </div>
                 </form>
             </div>
-            
+
             <div class="address">
                 <h2>Address</h2>
                 <form id="form-address">
-                    <div class="item-address">
+                    <div class="form-element">
                         <label for="fname">First name</label><br>
                         <input type="text" id="fname" name="fname">
+                        <div id="fname-error"></div>
                     </div>
-                    <div class="item-address">
+                    <div class="form-element">
                         <label for="lname">Last name</label><br>
                         <input type="text" id="lname" name="lname">
+                        <div id="lname-error"></div>
                     </div>
-                    <div class="item-address">
+                    <div class="form-element">
                         <label for="birthday">Birthday</label><br>
                         <input type="date" id="birthday" name="birthday">
+                        <div id="birthday-error"></div>
                     </div>
-                    <div class="item-address">
+                    <div class="form-element">
                         <label for="address1">Address 1</label><br>
                         <input type="text" id="address1" name="address1">
+                        <div id="address1-error"></div>
                     </div>
-                    <div class="item-address">
+                    <div class="form-element">
                         <label for="address2">Address 2</label><br>
                         <input type="text" id="address2" name="address2">
+                        <div id="address2-error"></div>
                     </div>
-                    <div class="item-address">
+                    <div class="form-element">
                         <label for="postal-code">Postal code</label><br>
                         <input type="number" id="postal-code" name="postal-code">
+                        <div id="postal-code-error"></div>
                     </div>
-                    <div class="item-address">
+                    <div class="form-element">
                         <label for="country">Country</label><br>
                         <select id="country" name="country">
                             <option value="Andorra">Andorra</option>
@@ -128,7 +146,7 @@
                             <option value="Greece">Greece</option>
                         </select>
                     </div>
-                    <div class="item-address">
+                    <div class="form-element">
                         <label for="phone">Phone</label><br>
                         <select id="tel-country" name="country">
                             <option value="AND">AND</option>
@@ -139,7 +157,7 @@
                         </select>
                         <input type="tel" id="phone" name="phone" placeholder="Your phone number">
                     </div>
-                    <div class="item-address">
+                    <div class="form-element">
                         <input type="checkbox">
                         <label for="checkbox">This is my regular address</label><br>
                     </div>
@@ -161,7 +179,7 @@
                     <textarea name="message" rows="5" cols="20"></textarea>
                 </form>
             </div>
-            
+
             <div class="finish">
                 <div class="order-message">
                     <h2>Your order is complete 🎉</h2>
@@ -204,7 +222,14 @@
                 </div>
             </div>
 
+            <div class="timer">
+                <p>You started registering 2 minutes ago. <br><br>Hurry up!
+                </p>
+            </div>
+
         </main>
+
+
         <footer>
             <div class="first-foot">
                 <h2>Shop 2022</h2>
