html page corrected

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,24 @@
                 <h2>Logo</h2>
             </div>
 
+            <div class="header-progress">
+                <div class="messages">
+                    <div class="message child-one">Profile</div>
+                    <div class="message child-two">Address</div>
+                    <div class="message child-three">Shipping</div>
+                    <div class="message child-four">Finish</div>
+                </div>
+                <div class="wrapper">
+                    <div class="margin-area">
+                        <div class="dot one"></div>
+                        <div class="dot two"></div>
+                        <div class="dot three"></div>
+                        <div class="dot four"></div>
+                        <div class="progress-bar first"></div>
+                    </div>
+                </div>
+        </header>
+
         <main>
             <div class="main">
                 <div class="minis">
@@ -58,24 +76,6 @@
                     <button class="btn-buy">Buy Now</button>
                 </div>
             </div>
-
-            <div class="header-progress">
-                <div class="messages">
-                    <div class="message child-one">Profile</div>
-                    <div class="message child-two">Address</div>
-                    <div class="message child-three">Shipping</div>
-                    <div class="message child-four">Finish</div>
-                </div>
-                <div class="wrapper">
-                    <div class="margin-area">
-                        <div class="dot one"></div>
-                        <div class="dot two"></div>
-                        <div class="dot three"></div>
-                        <div class="dot four"></div>
-                        <div class="progress-bar first"></div>
-                    </div>
-                </div>
-        </header>
 
             <div class="profile">
                 <h2>Profile</h2>
@@ -198,7 +198,7 @@
                                 <p class="product-size">Size:<span>M</span></p>
                                 <p class="product-color">Color:<span>🛑</span></p>
                                 <p class="delivery-txt">Estimate delivery date</p>
-                                <p class="delivery-date">31 december 2022</p>
+                                <p class="delivery-date">31 dezember 2022</p>
                             </div>
                         </div>
                         <div class="conditional-check">
@@ -208,6 +208,7 @@
                                 Please accept the terms and conditionals
                             </p>
                         </div>
+                        <button class="btn-buy">Buy Now</button>
                     </div>
                     <!-- Order card -->
                     <div class="order-card">
