Co-authored-by: jose-cuevas <jose-cuevas@users.noreply.github.com>

--- a/src/index.html
+++ b/src/index.html
@@ -167,13 +167,13 @@
             <div class="shipping">
                 <h2>Shipping Type</h2>
                 <form action="#">
-                    <input type="radio" id="free" name="free" value="free">
+                    <input type="radio" id="free" name="shipping" value="free">
                     <label for="free">FREE Shipping (72h)</label><br>
-                    <input type="radio" id="extra" name="extra" value="extra">
+                    <input type="radio" id="extra" name="shipping" value="extra">
                     <label for="extra">Extra Shipping (42h) 4,99$</label><br>
-                    <input type="radio" id="premium" name="premium" value="premium">
+                    <input type="radio" id="premium" name="shipping" value="premium">
                     <label for="extra">Premium Shipping (24h) 9,99$</label><br><br>
-                    <input type="checkbox" id="gifrt" name="gift" value="gift">
+                    <input type="checkbox" id="gifrt" name="shipping" value="gift">
                     <label for="gift"> is it a gift? </label><br><br>
                     <p>Gift Message:</p>
                     <textarea name="message" rows="5" cols="20"></textarea>
