--- a/src/index.html
+++ b/src/index.html
@@ -43,9 +43,9 @@
         <main>
             <section class="main">
                 <div class="minis">
-                    <button class="preview"></button><br>
-                    <button class="preview"></button><br>
-                    <button class="preview"></button><br>
+                    <div class="preview" id="front"><img src="/assets/front.jpg" alt="white t-shirt"></div>
+                    <div class="preview" id="turn"><img src="/assets/turn.jpg" alt="white t-shirt"></div>
+                    <div class="preview" id="behind"><img src="/assets/behind.jpg" alt="white t-shirt"></div>
                 </div>
                 <div class="picture">
                     <img src="/assets/t-shirt.png" alt="white t-shirt" />
@@ -66,12 +66,13 @@
                         <option value="XL">XL</option>
                     </select>
                     <br><br>
-                    <button class="options"></button>
-                    <button class="options"></button>
-                    <button class="options"></button>
-                    <button class="options"></button>
-                    <button class="options"></button>
-                    <button class="options"></button>
+                <div class="section-option">
+                    <div class="options"><img src="/assets/front-black.jpg" alt="t-shirt"></div>
+                    <div class="options"><img src="/assets/front-purple.jpg" alt="t-shirt"></div>
+                    <div class="options"><img src="/assets/front-light-blue.jpg" alt="t-shirt"></div>
+                    <div class="options"><img src="/assets/front-red.jpg" alt="t-shirt"></div>
+                    <div class="options"><img src="/assets/front-yellow.jpg" alt="t-shirt"></div>
+                </div>
                     <br><br>
                     <button class="btn-buy">Buy Now</button>
                 </div>
