progress-bar improved

--- a/src/index.html
+++ b/src/index.html
@@ -53,8 +53,8 @@
                 <div class="menu">
                     <h2>White t-shirt</h2>
                     <br><br>
-                    <h3>price:</h3>
-                    <br><br>
+                    <h3>Price:</h3>
+                    <br>
                     <h2>14.55€</h2>
                     <br><br>
                     <label for="size">Select size</label><br>
